📚 Auto-update: News data refreshed - 2026-01-07 15:14 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -44494,5 +44494,141 @@
         "published": "Wed, 07 Jan 2026 13:36:36 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1021\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/FTR-100-7.jpg\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1361\" />India\u2019s startup funding landscape remained under pressure in 2025, with total capital deployed declining 8% YoY to around $11 Bn,&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/warner-bros-discovery-rejects-paramounts-bid-again-calls-it-a-leveraged-buyout/",
+        "title": "Warner Bros. Discovery rejects Paramount\u2019s bid again, calls it a \u2018leveraged buyout\u2019",
+        "link": "https://techcrunch.com/2026/01/07/warner-bros-discovery-rejects-paramounts-bid-again-calls-it-a-leveraged-buyout/",
+        "published": "Wed, 07 Jan 2026 14:56:01 +0000",
+        "source": "TechCrunch",
+        "summary": "The studio's board unanimously rejected Paramount Skydance's revised $108.4 billion bid, calling the proposal a \"leveraged buyout\" that would saddle the company with $87 billion in debt."
+    },
+    {
+        "id": "https://www.theverge.com/news/857404/spotify-listening-activity-mobile",
+        "title": "Spotify is finally bringing your friends\u2019 Listening Activity to mobile",
+        "link": "https://www.theverge.com/news/857404/spotify-listening-activity-mobile",
+        "published": "2026-01-07T10:02:16-05:00",
+        "source": "The Verge",
+        "summary": "Since almost day one, Spotify has offered the ability to creep on your friends' listening habits - but you could mostly only uncover those guilty pleasures on the desktop app. The company experimented with a community feature on the mobile app back in 2022, but it never officially launched. Now the company is finally bringing [&#8230;]"
+    },
+    {
+        "id": "https://www.theverge.com/tech/857406/ces-2026-surprises",
+        "title": "What surprised us the most at CES 2026",
+        "link": "https://www.theverge.com/tech/857406/ces-2026-surprises",
+        "published": "2026-01-07T09:34:43-05:00",
+        "source": "The Verge",
+        "summary": "There are some things you can reliably expect to see at the Consumer Electronics Show every year. Companies will announce big splashy TVs, there's going to be a bunch of new gadgets for charging your other gadgets, and the odds are good that a robot or two is going to hilariously malfunction. But CES always [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/review/luxe-cafe-premier-series-automatic-espresso-machine/",
+        "title": "Ninja Luxe Cafe Premier Espresso Machine Review: Beginner\u2019s Luck",
+        "link": "https://www.wired.com/review/luxe-cafe-premier-series-automatic-espresso-machine/",
+        "published": "Wed, 07 Jan 2026 14:54:53 +0000",
+        "source": "WIRED",
+        "summary": "The budget semiautomatic also offers drip coffee and cold brew\u2014and some inconsistencies."
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/throne-from-the-co-founder-of-whoop-uses-computer-vision-to-study-your-poop-150000606.html?src=rss",
+        "title": "Throne, from the co-founder of Whoop, uses computer vision to study your poop",
+        "link": "https://www.engadget.com/home/smart-home/throne-from-the-co-founder-of-whoop-uses-computer-vision-to-study-your-poop-150000606.html?src=rss",
+        "published": "Wed, 07 Jan 2026 15:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Throne has rocked up to CES 2026 to show off its forthcoming <a class=\"link\" href=\"https://www.engadget.com/home/vivoos-toilet-computer-keeps-an-eye-on-your-hydration-030000209.html\" target=\"_blank\">toilet computer</a> which uses computer vision to study your poop. It hangs from the side of the bowl and has a camera and microphone to track bowel motions and urination and offer feedback. It was co-founded by (activity tracker) Whoop co-founder John Capodilupo, who explained the hardware is des"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/boston-dynamics-unveils-production-ready-version-of-atlas-robot-at-ces-2026-234047882.html?src=rss",
+        "title": "Boston Dynamics unveils production-ready version of Atlas robot at CES 2026",
+        "link": "https://www.engadget.com/big-tech/boston-dynamics-unveils-production-ready-version-of-atlas-robot-at-ces-2026-234047882.html?src=rss",
+        "published": "Wed, 07 Jan 2026 14:57:29 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>Boston Dynamics' Atlas is finally entering production. After years of testing this humanoid robot (and<a class=\"link\" href=\"https://www.engadget.com/science/watch-the-atlas-robot-bust-a-move-in-boston-dynamics-latest-video-211329951.html\" target=\"_blank\"> forcing it to dance</a>), the robotics company announced at <a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-on-lego-samsung-nvidia-dell-and-more-153146039.html\" target=\"_blank\">CES 2026</a> that the final version of the "
+    },
+    {
+        "id": "https://www.engadget.com/deals/apples-latest-25w-magsafe-charger-drops-to-only-30-141707024.html?src=rss",
+        "title": "Apple's latest 25W MagSafe charger drops to only $30",
+        "link": "https://www.engadget.com/deals/apples-latest-25w-magsafe-charger-drops-to-only-30-141707024.html?src=rss",
+        "published": "Wed, 07 Jan 2026 14:55:37 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>One way you can reduce the number of cables you have to deal with on the regular is by investing in a few wireless chargers. Those with iPhones should consider Apple's own MagSafe charger not only because of its sleek and effective design, but also because it's on sale right now at Amazon. The <a class=\"rapid-with-clickid\" href=\"https://shopping.yahoo.com/rdlw?merchantId=66ea567a-c987-4c2e-a2ff-02904efde6ea&amp;itemId=amazon_B0FQFKMMYB&amp;siteId=us-engadget&amp;pageId=1p-autolink&amp;content"
+    },
+    {
+        "id": "https://www.engadget.com/big-tech/ces-2026-day-1-the-biggest-tech-news-and-gadgets-you-missed-from-the-first-official-day-of-the-show-144040174.html?src=rss",
+        "title": "CES 2026 Day 1: The biggest tech news and gadgets you missed from the first official day of the show",
+        "link": "https://www.engadget.com/big-tech/ces-2026-day-1-the-biggest-tech-news-and-gadgets-you-missed-from-the-first-official-day-of-the-show-144040174.html?src=rss",
+        "published": "Wed, 07 Jan 2026 14:40:40 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/ces-2026-live-updates-from-techs-biggest-conference-in-las-vegas-153146838.html\" target=\"_blank\">CES 2026\u2019s</a> first official show day kept the pace up with a mix of near-term gaming upgrades, ambitious new form factors and a few reminders that not every gadget needs to do everything. NVIDIA announced important gaming news, we caught up with Samsung\u2019s tri-fold phone and Lenovo marched out an army of impressive looking gaming laptops and concept "
+    },
+    {
+        "id": "https://www.technologyreview.com/2026/01/07/1129490/deploying-a-hybrid-approach-to-web3-in-the-ai-era/",
+        "title": "Deploying a hybrid approach to Web3 in the AI era",
+        "link": "https://www.technologyreview.com/2026/01/07/1129490/deploying-a-hybrid-approach-to-web3-in-the-ai-era/",
+        "published": "Wed, 07 Jan 2026 14:00:00 +0000",
+        "source": "MIT Technology Review",
+        "summary": "When the concept of \u201cWeb 3.0\u201d first emerged about a decade ago the idea was clear: Create a more user-controlled internet that lets you do everything you can now, except without servers or intermediaries to manage the flow of information. Where Web2, which emerged in the early 2000s, relies on centralized systems to store data&#8230;"
+    },
+    {
+        "id": "https://ctan.math.illinois.edu/graphics/pgf/contrib/coffeestains/coffeestains-en.pdf",
+        "title": "LaTeX Coffee Stains [pdf]",
+        "link": "https://ctan.math.illinois.edu/graphics/pgf/contrib/coffeestains/coffeestains-en.pdf",
+        "published": "Wed, 07 Jan 2026 14:46:31 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46526933\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/midesktop-experience-original-kde-linux-desktop/",
+        "title": "Want to try the original KDE desktop from 1996? I did, and it took me back - here's how",
+        "link": "https://www.zdnet.com/article/midesktop-experience-original-kde-linux-desktop/",
+        "published": "Wed, 07 Jan 2026 14:58:00 GMT",
+        "source": "Latest news",
+        "summary": "You can revisit the early days of Linux through MiDesktop, a modern fork of the original KDE 1. It's a must-try nostalgic experiment."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/asml-says-social-media-hacking-claims-are-untrue/articleshow/126397376.cms",
+        "title": "ASML says social media hacking claims are untrue",
+        "link": "https://economictimes.indiatimes.com/tech/technology/asml-says-social-media-hacking-claims-are-untrue/articleshow/126397376.cms",
+        "published": "Wed, 07 Jan 2026 20:33:51 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Dutch computer \u200bchip equipment \u2060supplier ASML said on Wednesday that claims \u200cposted \u200con social media that \u200cthe company had been hacked were untrue."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/hsgs-continuation-fund-to-value-bytedance-at-up-to-370-billion-report/articleshow/126397189.cms",
+        "title": "HSG's continuation fund to value ByteDance at up to $370 billion: Report",
+        "link": "https://economictimes.indiatimes.com/tech/technology/hsgs-continuation-fund-to-value-bytedance-at-up-to-370-billion-report/articleshow/126397189.cms",
+        "published": "Wed, 07 Jan 2026 20:19:09 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "HSG, formerly Sequoia Capital China, is reportedly launching a new fund. This fund is expected to buy some of its shares in TikTok's parent company, ByteDance. The deal values ByteDance between $350 billion and $370 billion. This move comes as ByteDance's valuation continues to soar."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/spotify-makes-it-easier-for-creators-to-earn-reveals-10-billion-podcast-spend/articleshow/126396964.cms",
+        "title": "Spotify makes it easier for creators to earn, reveals $10 billion podcast spend",
+        "link": "https://economictimes.indiatimes.com/tech/technology/spotify-makes-it-easier-for-creators-to-earn-reveals-10-billion-podcast-spend/articleshow/126396964.cms",
+        "published": "Wed, 07 Jan 2026 19:59:21 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Spotify is boosting its creator earnings program and introducing new tools for video podcasters. This move aims to enhance competition with platforms like YouTube and Netflix. The company has invested heavily in podcasts and is now lowering entry thresholds for its monetisation program. Video podcast consumption on Spotify has seen significant growth since the program's launch."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/infosys-cognition-join-hands-to-push-ai-software-engineer-devin-across-global-enterprises/articleshow/126396823.cms",
+        "title": "Infosys, Cognition join hands to push AI software engineer 'Devin' across global enterprises",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/infosys-cognition-join-hands-to-push-ai-software-engineer-devin-across-global-enterprises/articleshow/126396823.cms",
+        "published": "Wed, 07 Jan 2026 19:50:59 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Infosys and Cognition announced a partnership to scale latter's AI coding engineer, Devin, to organisations. The collaboration will deploy Devin across Infosys' internal engineering ecosystem as well as client engagements globally."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/technology/wix-calls-employees-back-to-office-president-says-need-to-be-fast-due-to-ai/articleshow/126396614.cms",
+        "title": "Wix calls employees back to office; president says need to be fast due to AI",
+        "link": "https://economictimes.indiatimes.com/tech/technology/wix-calls-employees-back-to-office-president-says-need-to-be-fast-due-to-ai/articleshow/126396614.cms",
+        "published": "Wed, 07 Jan 2026 19:38:58 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Zohar said that at a time when AI is having serious implications for business, the decision is driven by the belief that in-person collaboration boosts speed, creativity, problem-solving, and team connection."
+    },
+    {
+        "id": "https://inc42.com/buzz/padelpark-merges-with-ms-dhonis-7padel-to-scale-turf-sports/",
+        "title": "PadelPark Merges with MS Dhoni\u2019s 7Padel To Scale Turf Sports",
+        "link": "https://inc42.com/buzz/padelpark-merges-with-ms-dhonis-7padel-to-scale-turf-sports/",
+        "published": "Wed, 07 Jan 2026 14:31:18 +0000",
+        "source": "Inc42 Media",
+        "summary": "<img alt=\"PadelPark Merges with MS Dhoni\u2019s 7Padel To Scale Turf Sports\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Untitled-design-3.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Turf sporting startup PadelPark India has merged with MS Dhoni owned competitor 7Padel, as per a release on Wednesday. The&#8230;"
     }
 ]
