📚 Auto-update: News data refreshed - 2026-01-07 16:17 UTC

--- a/knowledge_base.json
+++ b/knowledge_base.json
@@ -44630,5 +44630,133 @@
         "published": "Wed, 07 Jan 2026 14:31:18 +0000",
         "source": "Inc42 Media",
         "summary": "<img alt=\"PadelPark Merges with MS Dhoni\u2019s 7Padel To Scale Turf Sports\" class=\"webfeedsFeaturedVisual wp-post-image\" height=\"1020\" src=\"https://inc42.com/cdn-cgi/image/quality=75/https://asset.inc42.com/2026/01/Untitled-design-3.png\" style=\"display: block; margin: auto; margin-bottom: 5px;\" width=\"1360\" />Turf sporting startup PadelPark India has merged with MS Dhoni owned competitor 7Padel, as per a release on Wednesday. The&#8230;"
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/how-quilt-solved-the-heat-pumps-biggest-challenge/",
+        "title": "How Quilt solved the heat pump\u2019s biggest challenge",
+        "link": "https://techcrunch.com/2026/01/07/how-quilt-solved-the-heat-pumps-biggest-challenge/",
+        "published": "Wed, 07 Jan 2026 16:00:00 +0000",
+        "source": "TechCrunch",
+        "summary": "Quilt's heat pumps are built containing a suite of sensors, which have delivered mountains of data that allow its engineers to wring added performance out of its systems."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/whatsapp-rolls-out-new-group-chat-features-member-tags/",
+        "title": "WhatsApp rolls out new group chat features, including member tags",
+        "link": "https://techcrunch.com/2026/01/07/whatsapp-rolls-out-new-group-chat-features-member-tags/",
+        "published": "Wed, 07 Jan 2026 15:31:09 +0000",
+        "source": "TechCrunch",
+        "summary": "You can choose a tag that gives others in the group chat more context about who you are."
+    },
+    {
+        "id": "https://techcrunch.com/2026/01/07/spotify-now-lets-you-share-what-youre-streaming-in-real-time-with-friends/",
+        "title": "Spotify now lets you share what you\u2019re streaming in real time with friends",
+        "link": "https://techcrunch.com/2026/01/07/spotify-now-lets-you-share-what-youre-streaming-in-real-time-with-friends/",
+        "published": "Wed, 07 Jan 2026 15:18:59 +0000",
+        "source": "TechCrunch",
+        "summary": "You can tap a friend\u2019s listening activity to play the track, save it, open the menu, or react with an emoji."
+    },
+    {
+        "id": "https://www.theverge.com/tech/857428/hyperkin-gamesir-x5-alteron-clamp-bluetooth-wireless-controller",
+        "title": "You can turn this modular clamp-on controller into an N64 or GameCube gamepad",
+        "link": "https://www.theverge.com/tech/857428/hyperkin-gamesir-x5-alteron-clamp-bluetooth-wireless-controller",
+        "published": "2026-01-07T10:19:59-05:00",
+        "source": "The Verge",
+        "summary": "Hyperkin announced a new clamp-on style wireless controller created in collaboration with GameSir. The X5 Alteron features similar functionality to GameSir's GameSir G8 Plus that debuted in 2024 with an expanding telescopic mechanism that can clamp onto smartphones, tablets, and several versions of the Nintendo Switch, replacing the Joy-Cons. What sets the X5 Alteron apart [&#8230;]"
+    },
+    {
+        "id": "https://www.wired.com/story/venezuela-pentagon-press-corps/",
+        "title": "Venezuela Is the First Big Test for the Pentagon's Influencer Press Corps\u2014and It's Failing",
+        "link": "https://www.wired.com/story/venezuela-pentagon-press-corps/",
+        "published": "Wed, 07 Jan 2026 16:00:00 +0000",
+        "source": "WIRED",
+        "summary": "Mainstream reporters are out at the Pentagon, and right-wing influencers are in. The results are predictable, and oddly reminiscent of Iraq War-era warblogging."
+    },
+    {
+        "id": "https://www.wired.com/review/breville-luxe-brewer-drip-coffeemaker/",
+        "title": "Breville Luxe Brewer Review (2025): Good Drip, Real Cold Brew",
+        "link": "https://www.wired.com/review/breville-luxe-brewer-drip-coffeemaker/",
+        "published": "Wed, 07 Jan 2026 15:48:37 +0000",
+        "source": "WIRED",
+        "summary": "Like a lot of Breville's best devices, the Luxe Brewer combines technical sophistication with easy single-button operation."
+    },
+    {
+        "id": "https://www.engadget.com/general/eyebot-promises-an-accurate-eye-test-in-a-couple-of-minutes-160000668.html?src=rss",
+        "title": "Eyebot promises an accurate eye test in a couple of minutes",
+        "link": "https://www.engadget.com/general/eyebot-promises-an-accurate-eye-test-in-a-couple-of-minutes-160000668.html?src=rss",
+        "published": "Wed, 07 Jan 2026 16:00:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/2016-07-28-this-phone-powered-vision-test-can-replace-your-doctor.html\" target=\"_blank\">Eye tests</a> are an important part of life, but they aren\u2019t always the most convenient things to work into your schedule. It\u2019s an issue Eyebot thinks it has solved with its kiosk, which shrinks the time taken from 20 minutes to closer to three minutes. Plus, you don\u2019t need to book an appointment where an optician will lean too close in to your face while tria"
+    },
+    {
+        "id": "https://www.engadget.com/home/smart-home/switchbot-came-to-ces-with-a-laundry-robot-you-might-actually-be-able-to-buy-153000025.html?src=rss",
+        "title": "Switchbot came to CES with a laundry robot you might actually be able to buy",
+        "link": "https://www.engadget.com/home/smart-home/switchbot-came-to-ces-with-a-laundry-robot-you-might-actually-be-able-to-buy-153000025.html?src=rss",
+        "published": "Wed, 07 Jan 2026 15:30:00 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p>CES 2026 isn't the first year we've seen a wave of interesting robots or even useful robots crop up in Las Vegas. But it's the first year I can remember when there have been so many humanoid and humanoid-like robots performing actually useful tasks. Of those, Switchbot's Onero H1 has been one of the most intriguing robot helpers I've seen on the show floor, especially because the company says that it will actually go on sale later this year (though it won't come cheap).&nbsp;</p><p>Up to now,"
+    },
+    {
+        "id": "https://www.engadget.com/entertainment/lego-smart-play-hands-on-using-smart-brick-technology-to-get-kids-to-play-together-133000740.html?src=rss",
+        "title": "Lego Smart Play hands-on: Using Smart Brick technology to get kids to play together",
+        "link": "https://www.engadget.com/entertainment/lego-smart-play-hands-on-using-smart-brick-technology-to-get-kids-to-play-together-133000740.html?src=rss",
+        "published": "Wed, 07 Jan 2026 15:17:15 +0000",
+        "source": "Engadget is a web magazine with obsessive daily coverage of everything new in gadgets and consumer electronics",
+        "summary": "<p><a class=\"link\" href=\"https://www.engadget.com/entertainment/lego-unveils-a-technology-packed-smart-brick-at-ces-2026-190000511.html\" target=\"_blank\">Lego\u2019s Smart Play system</a> announced at CES 2026 earlier this week is a new embrace of digital technology that we haven\u2019t seen from the company before. While the demo Lego gave at its press conference on Monday was a good start to showing what Smart Bricks are capable of, it really isn\u2019t a substitute for seeing it in person. I was able to get "
+    },
+    {
+        "id": "https://www.ucsf.edu/news/2016/09/404081/sugar-papers-reveal-industry-role-shifting-national-heart-disease-focus",
+        "title": "Sugar industry influenced researchers and blamed fat for CVD",
+        "link": "https://www.ucsf.edu/news/2016/09/404081/sugar-papers-reveal-industry-role-shifting-national-heart-disease-focus",
+        "published": "Wed, 07 Jan 2026 14:29:25 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46526740\">Comments</a>"
+    },
+    {
+        "id": "https://www.shipmap.org/",
+        "title": "Shipmap.org",
+        "link": "https://www.shipmap.org/",
+        "published": "Wed, 07 Jan 2026 15:03:41 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46527161\">Comments</a>"
+    },
+    {
+        "id": "https://embd.cc/llm-problems-observed-in-humans",
+        "title": "LLM Problems Observed in Humans",
+        "link": "https://embd.cc/llm-problems-observed-in-humans",
+        "published": "Wed, 07 Jan 2026 15:36:25 +0000",
+        "source": "Hacker News",
+        "summary": "<a href=\"https://news.ycombinator.com/item?id=46527581\">Comments</a>"
+    },
+    {
+        "id": "https://www.zdnet.com/article/new-siri-release-date/",
+        "title": "Apple's biggest Siri update in years could arrive this March - but will it be enough?",
+        "link": "https://www.zdnet.com/article/new-siri-release-date/",
+        "published": "Wed, 07 Jan 2026 16:13:43 GMT",
+        "source": "Latest news",
+        "summary": "Likely arriving with iOS 26.4, the so-called LLM Siri promises to act more like ChatGPT and Gemini. But will Apple finally succeed this time around?"
+    },
+    {
+        "id": "https://www.zdnet.com/article/macos-tahoe-bug-bricked-mac-studio-how-to-fix/",
+        "title": "I bricked my $3,700 Mac Studio by upgrading to MacOS 26 - here's how I got it back",
+        "link": "https://www.zdnet.com/article/macos-tahoe-bug-bricked-mac-studio-how-to-fix/",
+        "published": "Wed, 07 Jan 2026 16:03:58 GMT",
+        "source": "Latest news",
+        "summary": "Warning: If you own a Mac with an M3 Ultra chip, don't be like me. Hold off on upgrading to Tahoe. Here's why."
+    },
+    {
+        "id": "https://www.zdnet.com/article/american-airlines-high-speed-wifi-free-sign-up/",
+        "title": "Free high-speed Wi-Fi rolling out on most American Airlines flights - how to get it",
+        "link": "https://www.zdnet.com/article/american-airlines-high-speed-wifi-free-sign-up/",
+        "published": "Wed, 07 Jan 2026 15:35:00 GMT",
+        "source": "Latest news",
+        "summary": "AT&amp;T partnered with the airline to provide free high-speed Wi-Fi on more than 2 million flights a year."
+    },
+    {
+        "id": "https://economictimes.indiatimes.com/tech/artificial-intelligence/uk-data-watchdog-contacts-musks-x-over-grok-ai-images/articleshow/126398110.cms",
+        "title": "UK data watchdog contacts Musk's X over Grok AI images",
+        "link": "https://economictimes.indiatimes.com/tech/artificial-intelligence/uk-data-watchdog-contacts-musks-x-over-grok-ai-images/articleshow/126398110.cms",
+        "published": "Wed, 07 Jan 2026 21:32:26 +0530",
+        "source": "Tech-Economic Times",
+        "summary": "Britain's \u200ddata regulator, \u200bthe Information Commissioner's Office, said \u2060on Wednesday it had asked Elon Musk's X to clarify \u200chow \u200cit was complying with data protection \u200claws in light of concerns about the use of X's built-in AI bot Grok \u200bto produce \u200bimages."
     }
 ]
